--- a/src/project.conf
+++ b/src/project.conf
@@ -8,5 +8,5 @@ dist=Makefile,appinterface.h
 [libApp]
 type=library
 sources=appclient.c,appinterface.c,appserver.c
-ldflags=-lssl
+ldflags=`pkg-config --libs libSystem` -lssl
 install=$(LIBDIR)
