--- a/tools/Makefile
+++ b/tools/Makefile
@@ -7,7 +7,7 @@ CPPFLAGSF= -I ../include
 CPPFLAGS=
 CFLAGSF	= -W
 CFLAGS	= -Wall -g -O2 -pedantic
-LDFLAGSF= -lSystem -L../src
+LDFLAGSF= -lApp -L../src
 LDFLAGS	= -L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib
 RM	= rm -f
 LN	= ln -f
