--- a/tools/project.conf
+++ b/tools/project.conf
@@ -2,7 +2,7 @@ targets=AppBroker,AppClient
 cppflags_force=-I ../include
 cflags_force=-W
 cflags=-Wall -g -O2 -pedantic
-ldflags_force=-lSystem -L../src
+ldflags_force=-lApp -L../src
 ldflags=-L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib
 dist=Makefile,README
 
