--- a/src/project.conf
+++ b/src/project.conf
@@ -1,12 +1,13 @@
 targets=libApp
 cppflags_force=-I ../include
 cppflags=
-cflags_force=-W -Wall -fPIC
+cflags_force=-W -Wall -fPIC `pkg-config --cflags libSystem`
 cflags=-g -O2 -pedantic
+ldflags_force=`pkg-config --libs libSystem`
+ldflags=
 dist=Makefile,appinterface.h
 
 [libApp]
 type=library
 sources=appclient.c,appinterface.c,appserver.c
-ldflags=`pkg-config --libs libSystem` -lssl
 install=$(LIBDIR)
