--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ PREFIX	= /usr/local
 DESTDIR	= 
 LIBDIR	= $(PREFIX)/lib
 CC	= cc
-CPPFLAGSF= -I ../include
+CPPFLAGSF= -I ../include -I $(PREFIX)/include
 CPPFLAGS= 
 CFLAGSF	= -W -Wall -fPIC `pkg-config --cflags libSystem`
 CFLAGS	= -g -O2 -pedantic
