--- a/src/project.conf
+++ b/src/project.conf
@@ -1,5 +1,5 @@
 targets=libApp
-cppflags_force=-I ../include
+cppflags_force=-I ../include -I $(PREFIX)/include
 cppflags=
 cflags_force=-W -Wall -fPIC `pkg-config --cflags libSystem`
 cflags=-g -O2 -pedantic
