--- a/tools/Makefile
+++ b/tools/Makefile
@@ -3,7 +3,7 @@ PREFIX	= /usr/local
 DESTDIR	= 
 BINDIR	= $(PREFIX)/bin
 CC	= cc
-CPPFLAGSF= -I ../include
+CPPFLAGSF= -I ../include -I $(PREFIX)/include
 CPPFLAGS=
 CFLAGSF	= -W
 CFLAGS	= -Wall -g -O2 -pedantic
