Working on CFLAGS

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,8 +5,8 @@ LIBDIR	= $(PREFIX)/lib
 CC	= cc
 CPPFLAGSF= -I ../include -I $(PREFIX)/include
 CPPFLAGS= 
-CFLAGSF	= -W -Wall -fPIC `pkg-config --cflags libSystem`
-CFLAGS	= -g -O2 -pedantic
+CFLAGSF	= -W -fPIC `pkg-config --cflags libSystem`
+CFLAGS	= -Wall -g -O2 -pedantic
 LDFLAGSF= `pkg-config --libs libSystem`
 LDFLAGS	= 
 AR	= ar -rc
