--- a/src/project.conf
+++ b/src/project.conf
@@ -1,8 +1,8 @@
 targets=libApp
 cppflags_force=-I ../include -I $(PREFIX)/include
 cppflags=
-cflags_force=-W -Wall -fPIC `pkg-config --cflags libSystem`
-cflags=-g -O2 -pedantic
+cflags_force=-W -fPIC `pkg-config --cflags libSystem`
+cflags=-Wall -g -O2 -pedantic
 ldflags_force=`pkg-config --libs libSystem`
 ldflags=
 dist=Makefile,appinterface.h
