--- a/src/project.conf
+++ b/src/project.conf
@@ -10,4 +10,5 @@ dist=Makefile,appinterface.h
 [libApp]
 type=library
 sources=appclient.c,appinterface.c,appserver.c
+ldflags=-ldl -lsocket
 install=$(LIBDIR)
