No longer force -I $(PREFIX)/include

--- a/tools/project.conf
+++ b/tools/project.conf
@@ -1,5 +1,6 @@
 targets=AppBroker,AppClient
-cppflags_force=-I ../include -I $(PREFIX)/include
+cppflags_force=-I ../include
+cppflags=-I $(PREFIX)/include
 cflags_force=-W
 cflags=-Wall -g -O2 -pedantic
 ldflags_force=-lApp -L../src
