--- a/src/project.conf
+++ b/src/project.conf
@@ -1,14 +1,13 @@
 targets=libApp
-cppflags_force=-I ../include -I $(PREFIX)/include
-cppflags=
+cppflags_force=-I ../include
+cppflags=-I $(PREFIX)/include
 cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
-ldflags_force=`pkg-config --libs libSystem`
 ldflags=
 dist=Makefile,appinterface.h
 
 [libApp]
 type=library
 sources=appclient.c,appinterface.c,appserver.c
-ldflags=-ldl -lsocket
+ldflags=`pkg-config --libs libSystem` -ldl -lsocket
 install=$(LIBDIR)
