--- a/tools/Makefile
+++ b/tools/Makefile
@@ -3,8 +3,8 @@ PREFIX	= /usr/local
 DESTDIR	= 
 BINDIR	= $(PREFIX)/bin
 CC	= cc
-CPPFLAGSF= -I ../include -I $(PREFIX)/include
-CPPFLAGS=
+CPPFLAGSF= -I ../include
+CPPFLAGS= -I $(PREFIX)/include
 CFLAGSF	= -W
 CFLAGS	= -Wall -g -O2 -pedantic
 LDFLAGSF= -lApp -L../src
