Restored some dependencies

--- a/src/project.conf
+++ b/src/project.conf
@@ -11,3 +11,12 @@ type=library
 sources=appclient.c,appinterface.c,appserver.c
 ldflags=`pkg-config --libs libSystem` -ldl -lsocket
 install=$(LIBDIR)
+
+[appclient.c]
+depends=appinterface.h
+
+[appinterface.h]
+depends=../config.h
+
+[appserver.c]
+depends=appinterface.h,../config.h
