--- a/src/Makefile
+++ b/src/Makefile
@@ -30,13 +30,13 @@ libApp.a: $(libApp_OBJS)
 libApp.so: $(libApp_OBJS)
 	$(LD) -o libApp.so -Wl,-soname,libApp.so.0 $(libApp_OBJS) $(libApp_LDFLAGS)
 
-appclient.o: appclient.c
+appclient.o: appclient.c appinterface.h
 	$(CC) $(libApp_CFLAGS) -c appclient.c
 
 appinterface.o: appinterface.c
 	$(CC) $(libApp_CFLAGS) -c appinterface.c
 
-appserver.o: appserver.c
+appserver.o: appserver.c appinterface.h ../config.h
 	$(CC) $(libApp_CFLAGS) -c appserver.c
 
 clean:
