Both tools need the libSystem

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -5,9 +5,9 @@ BINDIR	= $(PREFIX)/bin
 CC	= cc
 CPPFLAGSF= -I ../include
 CPPFLAGS= -I $(PREFIX)/include
-CFLAGSF	= -W
+CFLAGSF	= -W `pkg-config --cflags libSystem`
 CFLAGS	= -Wall -g -O2 -pedantic
-LDFLAGSF= -lApp -L../src
+LDFLAGSF= -lApp -L../src `pkg-config --libs libSystem`
 LDFLAGS	= -L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib
 RM	= rm -f
 LN	= ln -f
