--- a/tools/project.conf
+++ b/tools/project.conf
@@ -1,9 +1,9 @@
 targets=AppBroker,AppClient
 cppflags_force=-I ../include
 cppflags=-I $(PREFIX)/include
-cflags_force=-W
+cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
-ldflags_force=-lApp -L../src
+ldflags_force=-lApp -L../src `pkg-config --libs libSystem`
 ldflags=-L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib
 dist=Makefile,README
 
