Build with SSL support by default

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,10 +4,10 @@ DESTDIR	=
 LIBDIR	= $(PREFIX)/lib
 CC	= cc
 CPPFLAGSF= -I ../include
-CPPFLAGS= -I $(PREFIX)/include
+CPPFLAGS= -I $(PREFIX)/include -D WITH_SSL
 CFLAGSF	= -W -fPIC `pkg-config --cflags libSystem`
 CFLAGS	= -Wall -g -O2 -pedantic
-LDFLAGS	= 
+LDFLAGS	= -lssl
 AR	= ar -rc
 RANLIB	= ranlib
 LD	= $(CC) -shared
