--- a/src/project.conf
+++ b/src/project.conf
@@ -1,9 +1,9 @@
 targets=libApp
 cppflags_force=-I ../include
-cppflags=-I $(PREFIX)/include
+cppflags=-I $(PREFIX)/include -D WITH_SSL
 cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
-ldflags=
+ldflags=-lssl
 dist=Makefile,appinterface.h
 
 [libApp]
