Build fix for Windows

--- a/src/project.conf
+++ b/src/project.conf
@@ -9,7 +9,7 @@ dist=Makefile,appinterface.h
 [libApp]
 type=library
 sources=appclient.c,appinterface.c,appserver.c
-ldflags=`pkg-config --libs libSystem` -lsocket
+ldflags=`pkg-config --libs libSystem` -lsocket -lws2_32
 install=$(LIBDIR)
 
 [appclient.c]
