--- a/include/System/project.conf
+++ b/include/System/project.conf
@@ -1,11 +1,11 @@
-includes=App.h,appclient.h,appserver.h
+includes=App.h,App/appclient.h,App/appserver.h
 dist=Makefile
 
 [App.h]
 install=$(INCLUDEDIR)/System
 
-[appclient.h]
+[App/appclient.h]
 install=$(INCLUDEDIR)/System
 
-[appserver.h]
+[App/appserver.h]
 install=$(INCLUDEDIR)/System
