--- a/src/project.conf
+++ b/src/project.conf
@@ -13,10 +13,10 @@ ldflags=`pkg-config --libs libSystem` -lsocket -lws2_32
 install=$(LIBDIR)
 
 [appclient.c]
-depends=appinterface.h
+depends=appinterface.h,../include/System/App/appclient.h
 
-[appinterface.h]
-depends=../config.h
+[appinterface.c]
+depends=../include/System/App/appserver.h,../config.h
 
 [appserver.c]
-depends=appinterface.h,../config.h
+depends=appinterface.h,../include/System/App/appserver.h,../config.h
