--- a/tools/Makefile
+++ b/tools/Makefile
@@ -7,7 +7,7 @@ CPPFLAGSF= -I ../include
 CPPFLAGS= -I $(PREFIX)/include
 CFLAGSF	= -W `pkg-config --cflags libSystem`
 CFLAGS	= -Wall -g -O2 -pedantic
-LDFLAGSF= -lApp -L../src `pkg-config --libs libSystem`
+LDFLAGSF= -L../src `pkg-config --libs libSystem` -lApp
 LDFLAGS	= -L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib
 RM	= rm -f
 LN	= ln -f
