--- a/tools/project.conf
+++ b/tools/project.conf
@@ -3,7 +3,7 @@ cppflags_force=-I ../include
 cppflags=-I $(PREFIX)/include
 cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
-ldflags_force=-lApp -L../src `pkg-config --libs libSystem`
+ldflags_force=-L../src `pkg-config --libs libSystem` -lApp
 ldflags=-L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib
 dist=Makefile,README
 
