--- a/include/System/project.conf
+++ b/include/System/project.conf
@@ -1,11 +1,6 @@
-includes=App.h,App/appclient.h,App/appserver.h
+subdirs=App
+includes=App.h
 dist=Makefile
 
 [App.h]
-install=$(INCLUDEDIR)/System
-
-[App/appclient.h]
-install=$(INCLUDEDIR)/System
-
-[App/appserver.h]
 install=$(INCLUDEDIR)/System
