--- a/include/System/Makefile
+++ b/include/System/Makefile
@@ -1,3 +1,4 @@
+SUBDIRS	= App
 PREFIX	= /usr/local
 DESTDIR	= 
 RM	= rm -f
@@ -7,23 +8,24 @@ INSTALL	= install
 INCLUDEDIR= $(PREFIX)/include
 
 
-all:
+all: subdirs
+
+subdirs:
+	@for i in $(SUBDIRS); do (cd $$i && $(MAKE)) || exit; done
 
 clean:
+	@for i in $(SUBDIRS); do (cd $$i && $(MAKE) clean) || exit; done
 
-distclean: clean
+distclean:
+	@for i in $(SUBDIRS); do (cd $$i && $(MAKE) distclean) || exit; done
 
 install:
+	@for i in $(SUBDIRS); do (cd $$i && $(MAKE) install) || exit; done
 	$(MKDIR) $(DESTDIR)$(INCLUDEDIR)/System
 	$(INSTALL) -m 0644 -- App.h $(DESTDIR)$(INCLUDEDIR)/System/App.h
-	$(MKDIR) $(DESTDIR)$(INCLUDEDIR)/System
-	$(INSTALL) -m 0644 -- App/appclient.h $(DESTDIR)$(INCLUDEDIR)/System/App/appclient.h
-	$(MKDIR) $(DESTDIR)$(INCLUDEDIR)/System
-	$(INSTALL) -m 0644 -- App/appserver.h $(DESTDIR)$(INCLUDEDIR)/System/App/appserver.h
 
 uninstall:
+	@for i in $(SUBDIRS); do (cd $$i && $(MAKE) uninstall) || exit; done
 	$(RM) -- $(DESTDIR)$(INCLUDEDIR)/System/App.h
-	$(RM) -- $(DESTDIR)$(INCLUDEDIR)/System/App/appclient.h
-	$(RM) -- $(DESTDIR)$(INCLUDEDIR)/System/App/appserver.h
 
-.PHONY: all clean distclean install uninstall
+.PHONY: all subdirs clean distclean install uninstall
