Always link with libSystem

--- a/src/project.conf
+++ b/src/project.conf
@@ -3,6 +3,7 @@ cppflags_force=-I ../include
 cppflags=-I $(PREFIX)/include -D WITH_SSL
 cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
+ldflags_force=`pkg-config --libs libSystem`
 ldflags=-lssl
 dist=Makefile,appinterface.h
 
