Fixed "make dist"

--- a/doc/project.conf
+++ b/doc/project.conf
@@ -1,6 +1,6 @@
 subdirs=gtkdoc
 targets=gtkdoc/libApp.types,gtkdoc/sgml.stamp,html/index.html
-dist=Makefile,GRAMMAR,gtkdoc.sh
+dist=Makefile,gtkdoc.sh
 
 [gtkdoc/libApp.types]
 type=script
