--- a/doc/project.conf
+++ b/doc/project.conf
@@ -1,17 +1,22 @@
 subdirs=gtkdoc
-targets=gtkdoc/libApp.types,gtkdoc/sgml.stamp,html/index.html
+targets=gtkdoc/libApp.types,gtkdoc/tmpl.stamp,gtkdoc/sgml.stamp,gtkdoc/html.stamp
 dist=Makefile,gtkdoc.sh
 
 [gtkdoc/libApp.types]
 type=script
 script=./gtkdoc.sh
 
-[gtkdoc/sgml.stamp]
+[gtkdoc/tmpl.stamp]
 type=script
 script=./gtkdoc.sh
 depends=gtkdoc/libApp.types
 
-[html/index.html]
+[gtkdoc/sgml.stamp]
 type=script
 script=./gtkdoc.sh
-depends=gtkdoc/libApp-docs.xml,gtkdoc/sgml.stamp
+depends=gtkdoc/tmpl.stamp
+
+[gtkdoc/html.stamp]
+type=script
+script=./gtkdoc.sh
+depends=gtkdoc/libApp-docs.xml,gtkdoc/sgml.stamp,gtkdoc/tmpl.stamp
