--- a/doc/project.conf
+++ b/doc/project.conf
@@ -20,3 +20,4 @@ depends=gtkdoc/tmpl.stamp
 type=script
 script=./gtkdoc.sh
 depends=gtkdoc/libApp-docs.xml,gtkdoc/sgml.stamp,gtkdoc/tmpl.stamp
+install=
