--- a/data/libApp.pc.in
+++ b/data/libApp.pc.in
@@ -8,4 +8,4 @@ Description: DeforaOS System essential library
 Version: @VERSION@
 Requires: libSystem
 Cflags: -I${includedir}
-Libs: -L${libdir} -Wl,-rpath-link,${libdir} -Wl,-rpath,${libdir} -lApp
+Libs: -L${libdir} @RPATH@ -lApp
