--- a/src/project.conf
+++ b/src/project.conf
@@ -1,6 +1,7 @@
 targets=libApp
 cppflags_force=-I ../include
 cppflags=-I $(PREFIX)/include -D WITH_SSL
+#cppflags=-I $(PREFIX)/include
 cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
 ldflags_force=`pkg-config --libs libSystem`
@@ -10,7 +11,8 @@ dist=Makefile,appinterface.h
 [libApp]
 type=library
 sources=appclient.c,appinterface.c,appserver.c
-ldflags=`pkg-config --libs libSystem` -lsocket -lws2_32
+ldflags=`pkg-config --libs openssl` -lssl -lsocket -lws2_32
+#ldflags=-lsocket -lws2_32
 install=$(LIBDIR)
 
 [appclient.c]
