--- a/src/project.conf
+++ b/src/project.conf
@@ -6,17 +6,17 @@ cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
 ldflags_force=`pkg-config --libs libSystem`
 ldflags=-lssl
-dist=Makefile,appinterface.h
+dist=Makefile,appinterface.h,common.h
 
 [libApp]
 type=library
-sources=appclient.c,appinterface.c,appserver.c
+sources=appclient.c,appinterface.c,appserver.c,common.c
 ldflags=`pkg-config --libs openssl` -lssl -lsocket -lws2_32
 #ldflags=-lsocket -lws2_32
 install=$(LIBDIR)
 
 [appclient.c]
-depends=appinterface.h,../include/System/App/appclient.h
+depends=appinterface.h,../include/System/App/appclient.h,common.h
 
 [appinterface.c]
 depends=../include/System/App/appserver.h,../config.h
