--- a/src/project.conf
+++ b/src/project.conf
@@ -16,10 +16,10 @@ ldflags=`pkg-config --libs openssl` -lssl -lsocket -lws2_32
 install=$(LIBDIR)
 
 [appclient.c]
-depends=appinterface.h,../include/System/App/appclient.h,common.h
+depends=appinterface.h,../include/App/appclient.h,common.h
 
 [appinterface.c]
-depends=../include/System/App/appserver.h,../config.h
+depends=../include/App/appserver.h,../config.h
 
 [appserver.c]
-depends=appinterface.h,../include/System/App/appserver.h,../config.h
+depends=appinterface.h,../include/App/appserver.h,../config.h
