--- a/src/project.conf
+++ b/src/project.conf
@@ -1,18 +1,16 @@
 targets=libApp
 cppflags_force=-I ../include
-cppflags=-I $(PREFIX)/include -D WITH_SSL
-#cppflags=-I $(PREFIX)/include
+cppflags=-I $(PREFIX)/include
 cflags_force=-W -fPIC `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
 ldflags_force=`pkg-config --libs libSystem`
-ldflags=-lssl
-dist=Makefile,appinterface.h,common.h
+ldflags=
+dist=Makefile,appinterface.h,apptransport.h,common.h
 
 [libApp]
 type=library
-sources=appclient.c,appinterface.c,appserver.c,common.c
-ldflags=`pkg-config --libs openssl` -lssl -lsocket -lws2_32
-#ldflags=-lsocket -lws2_32
+sources=appclient.c,appinterface.c,appmessage.c,appserver.c,apptransport.c,common.c
+ldflags=-lsocket -lws2_32
 install=$(LIBDIR)
 
 [appclient.c]
@@ -21,5 +19,11 @@ depends=appinterface.h,../include/App/appclient.h,common.h
 [appinterface.c]
 depends=../include/App/appserver.h,../config.h
 
+[apptransport.c]
+depends=../include/App/appmessage.h,../config.h
+
 [appserver.c]
 depends=appinterface.h,../include/App/appserver.h,../config.h
+
+[apptransport.c]
+depends=apptransport.h,../include/App/apptransport.h,../config.h
