--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -6,11 +6,14 @@ cflags=-Wall -g -O2 -pedantic -fPIC
 [openssl]
 type=plugin
 sources=openssl.c
+install=$(LIBDIR)/App/transport
 
 [tcp]
 type=plugin
 sources=tcp.c
+install=$(LIBDIR)/App/transport
 
 [udp]
 type=plugin
 sources=udp.c
+install=$(LIBDIR)/App/transport
