Make sure to install every header

--- a/include/App/project.conf
+++ b/include/App/project.conf
@@ -1,8 +1,17 @@
-includes=appclient.h,appserver.h
+includes=app.h,appclient.h,appmessage.h,appserver.h,apptransport.h
 dist=Makefile
+
+[app.h]
+install=$(INCLUDEDIR)/System/App
 
 [appclient.h]
 install=$(INCLUDEDIR)/System/App
 
+[appmessage.h]
+install=$(INCLUDEDIR)/System/App
+
 [appserver.h]
+install=$(INCLUDEDIR)/System/App
+
+[apptransport.h]
 install=$(INCLUDEDIR)/System/App
