Fixed building the tools

--- a/tools/project.conf
+++ b/tools/project.conf
@@ -1,6 +1,6 @@
 targets=AppBroker,AppClient
 cppflags_force=-I ../include
-cppflags=-I $(PREFIX)/include
+cppflags=
 cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2 -pedantic
 ldflags_force=-L../src `pkg-config --libs libSystem` -lApp
