--- a/tools/Makefile
+++ b/tools/Makefile
@@ -4,7 +4,7 @@ DESTDIR	=
 BINDIR	= $(PREFIX)/bin
 CC	?= cc
 CPPFLAGSF= -I ../include
-CPPFLAGS= -I $(PREFIX)/include
+CPPFLAGS=
 CFLAGSF	= -W `pkg-config --cflags libSystem`
 CFLAGS	= -Wall -g -O2 -pedantic
 LDFLAGSF= -L../src `pkg-config --libs libSystem` -lApp
