--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -8,6 +8,9 @@ type=plugin
 sources=openssl.c
 install=$(LIBDIR)/App/transport
 
+[openssl.c]
+depends=../../config.h
+
 [tcp]
 type=plugin
 sources=tcp.c
