Moving OpenSSL support to a separate folder (should fix embedded builds)

--- a/data/libApp.pc.in
+++ b/data/libApp.pc.in
@@ -1,5 +1,5 @@
 prefix=@PREFIX@
-includedir=${prefix}/include
+includedir=${prefix}/include/System
 exec_prefix=${prefix}
 libdir=${exec_prefix}/lib
 
