--- a/src/transport/Makefile
+++ b/src/transport/Makefile
@@ -1,4 +1,4 @@
-TARGETS	= openssl.so tcp.so udp.so
+TARGETS	= tcp.so udp.so
 PREFIX	= /usr/local
 DESTDIR	=
 LIBDIR	= $(PREFIX)/lib
@@ -18,13 +18,6 @@ INSTALL	?= install
 
 all: $(TARGETS)
 
-openssl_OBJS = openssl.o
-openssl_CFLAGS = $(CPPFLAGSF) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS)
-openssl_LDFLAGS = $(LDFLAGSF) $(LDFLAGS)
-
-openssl.so: $(openssl_OBJS)
-	$(CCSHARED) -o openssl.so $(openssl_OBJS) $(openssl_LDFLAGS)
-
 tcp_OBJS = tcp.o
 tcp_CFLAGS = $(CPPFLAGSF) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS)
 tcp_LDFLAGS = $(LDFLAGSF) $(LDFLAGS)
@@ -39,9 +32,6 @@ udp_LDFLAGS = $(LDFLAGSF) $(LDFLAGS)
 udp.so: $(udp_OBJS)
 	$(CCSHARED) -o udp.so $(udp_OBJS) $(udp_LDFLAGS)
 
-openssl.o: openssl.c ../../config.h
-	$(CC) $(openssl_CFLAGS) -c openssl.c
-
 tcp.o: tcp.c
 	$(CC) $(tcp_CFLAGS) -c tcp.c
 
@@ -49,21 +39,18 @@ udp.o: udp.c
 	$(CC) $(udp_CFLAGS) -c udp.c
 
 clean:
-	$(RM) -- $(openssl_OBJS) $(tcp_OBJS) $(udp_OBJS)
+	$(RM) -- $(tcp_OBJS) $(udp_OBJS)
 
 distclean: clean
 	$(RM) -- $(TARGETS)
 
 install: $(TARGETS)
 	$(MKDIR) $(DESTDIR)$(LIBDIR)/App/transport
-	$(INSTALL) -m 0644 -- openssl.so $(DESTDIR)$(LIBDIR)/App/transport/openssl.so
-	$(MKDIR) $(DESTDIR)$(LIBDIR)/App/transport
 	$(INSTALL) -m 0644 -- tcp.so $(DESTDIR)$(LIBDIR)/App/transport/tcp.so
 	$(MKDIR) $(DESTDIR)$(LIBDIR)/App/transport
 	$(INSTALL) -m 0644 -- udp.so $(DESTDIR)$(LIBDIR)/App/transport/udp.so
 
 uninstall:
-	$(RM) -- $(DESTDIR)$(LIBDIR)/App/transport/openssl.so
 	$(RM) -- $(DESTDIR)$(LIBDIR)/App/transport/tcp.so
 	$(RM) -- $(DESTDIR)$(LIBDIR)/App/transport/udp.so
 
