--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -1,15 +1,7 @@
-targets=openssl,tcp,udp
+targets=tcp,udp
 cppflags=-I ../../include
 cflags_force=-W
 cflags=-Wall -g -O2 -pedantic -fPIC
-
-[openssl]
-type=plugin
-sources=openssl.c
-install=$(LIBDIR)/App/transport
-
-[openssl.c]
-depends=../../config.h
 
 [tcp]
 type=plugin
