Fixed embedded builds

--- a/src/transport/Makefile
+++ b/src/transport/Makefile
@@ -3,8 +3,8 @@ PREFIX	= /usr/local
 DESTDIR	=
 LIBDIR	= $(PREFIX)/lib
 CC	?= cc
-CPPFLAGSF?=
-CPPFLAGS= -I ../../include
+CPPFLAGSF= -I ../../include
+CPPFLAGS=
 CFLAGSF	= -W
 CFLAGS	= -Wall -g -O2 -pedantic -fPIC
 AR	?= ar
