--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -1,5 +1,6 @@
 targets=tcp,udp
-cppflags=-I ../../include
+cppflags_force=-I ../../include
+cppflags=
 cflags_force=-W
 cflags=-Wall -g -O2 -pedantic -fPIC
 
