--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -1,8 +1,8 @@
 targets=tcp,udp
 cppflags_force=-I ../../include
 cppflags=
-cflags_force=-W
-cflags=-Wall -g -O2 -pedantic -fPIC
+cflags_force=-W -fPIC
+cflags=-Wall -g -O2 -pedantic
 
 [tcp]
 type=plugin
