No longer install to $(INCLUDEDIR)/System as it breaks some system includes

--- a/data/libApp.pc.in
+++ b/data/libApp.pc.in
@@ -1,5 +1,5 @@
 prefix=@PREFIX@
-includedir=${prefix}/include/System
+includedir=${prefix}/include
 exec_prefix=${prefix}
 libdir=${exec_prefix}/lib
 
