Reverted the include path (as <System/App.h> is actually better)

--- a/include/App/Makefile
+++ b/include/App/Makefile
@@ -14,22 +14,22 @@ clean:
 distclean: clean
 
 install:
-	$(MKDIR) $(DESTDIR)$(INCLUDEDIR)/App
-	$(INSTALL) -m 0644 -- app.h $(DESTDIR)$(INCLUDEDIR)/App/app.h
-	$(MKDIR) $(DESTDIR)$(INCLUDEDIR)/App
-	$(INSTALL) -m 0644 -- appclient.h $(DESTDIR)$(INCLUDEDIR)/App/appclient.h
-	$(MKDIR) $(DESTDIR)$(INCLUDEDIR)/App
-	$(INSTALL) -m 0644 -- appmessage.h $(DESTDIR)$(INCLUDEDIR)/App/appmessage.h
-	$(MKDIR) $(DESTDIR)$(INCLUDEDIR)/App
-	$(INSTALL) -m 0644 -- appserver.h $(DESTDIR)$(INCLUDEDIR)/App/appserver.h
-	$(MKDIR) $(DESTDIR)$(INCLUDEDIR)/App
-	$(INSTALL) -m 0644 -- apptransport.h $(DESTDIR)$(INCLUDEDIR)/App/apptransport.h
+	$(MKDIR) $(DESTDIR)$(INCLUDEDIR)/System/App
+	$(INSTALL) -m 0644 -- app.h $(DESTDIR)$(INCLUDEDIR)/System/App/app.h
+	$(MKDIR) $(DESTDIR)$(INCLUDEDIR)/System/App
+	$(INSTALL) -m 0644 -- appclient.h $(DESTDIR)$(INCLUDEDIR)/System/App/appclient.h
+	$(MKDIR) $(DESTDIR)$(INCLUDEDIR)/System/App
+	$(INSTALL) -m 0644 -- appmessage.h $(DESTDIR)$(INCLUDEDIR)/System/App/appmessage.h
+	$(MKDIR) $(DESTDIR)$(INCLUDEDIR)/System/App
+	$(INSTALL) -m 0644 -- appserver.h $(DESTDIR)$(INCLUDEDIR)/System/App/appserver.h
+	$(MKDIR) $(DESTDIR)$(INCLUDEDIR)/System/App
+	$(INSTALL) -m 0644 -- apptransport.h $(DESTDIR)$(INCLUDEDIR)/System/App/apptransport.h
 
 uninstall:
-	$(RM) -- $(DESTDIR)$(INCLUDEDIR)/App/app.h
-	$(RM) -- $(DESTDIR)$(INCLUDEDIR)/App/appclient.h
-	$(RM) -- $(DESTDIR)$(INCLUDEDIR)/App/appmessage.h
-	$(RM) -- $(DESTDIR)$(INCLUDEDIR)/App/appserver.h
-	$(RM) -- $(DESTDIR)$(INCLUDEDIR)/App/apptransport.h
+	$(RM) -- $(DESTDIR)$(INCLUDEDIR)/System/App/app.h
+	$(RM) -- $(DESTDIR)$(INCLUDEDIR)/System/App/appclient.h
+	$(RM) -- $(DESTDIR)$(INCLUDEDIR)/System/App/appmessage.h
+	$(RM) -- $(DESTDIR)$(INCLUDEDIR)/System/App/appserver.h
+	$(RM) -- $(DESTDIR)$(INCLUDEDIR)/System/App/apptransport.h
 
 .PHONY: all clean distclean install uninstall
