--- a/include/App/project.conf
+++ b/include/App/project.conf
@@ -2,16 +2,16 @@ includes=app.h,appclient.h,appmessage.h,appserver.h,apptransport.h
 dist=Makefile
 
 [app.h]
-install=$(INCLUDEDIR)/App
+install=$(INCLUDEDIR)/System/App
 
 [appclient.h]
-install=$(INCLUDEDIR)/App
+install=$(INCLUDEDIR)/System/App
 
 [appmessage.h]
-install=$(INCLUDEDIR)/App
+install=$(INCLUDEDIR)/System/App
 
 [appserver.h]
-install=$(INCLUDEDIR)/App
+install=$(INCLUDEDIR)/System/App
 
 [apptransport.h]
-install=$(INCLUDEDIR)/App
+install=$(INCLUDEDIR)/System/App
