--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -3,6 +3,7 @@ cppflags_force=-I ../../include
 cppflags=
 cflags_force=-W -fPIC
 cflags=-Wall -g -O2 -pedantic
+dist=Makefile
 
 [tcp]
 type=plugin
