--- a/project.conf
+++ b/project.conf
@@ -3,4 +3,4 @@ version=0.1.5
 config=h,sh
 dist=Makefile,COPYING,config.h,config.sh
 
-subdirs=data,doc,include,src,src/transport,tools
+subdirs=data,doc,include,src,src/transport,tests,tools
