Now loading the UDP transport

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -5,9 +5,9 @@ BINDIR	= $(PREFIX)/bin
 CC	?= cc
 CPPFLAGSF?=
 CPPFLAGS= -I ../include
-CFLAGSF	= -W
+CFLAGSF	= -W `pkg-config --cflags libSystem`
 CFLAGS	= -Wall -g -O2
-LDFLAGSF= -lApp
+LDFLAGSF= `pkg-config --libs libSystem` -lApp
 LDFLAGS	= -L../src -Wl,-rpath,../src
 RM	?= rm -f
 LN	?= ln -f
