--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,8 +1,8 @@
 targets=tests.log,udp
 cppflags=-I ../include
-cflags_force=-W
+cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2
-ldflags_force=-lApp
+ldflags_force=`pkg-config --libs libSystem` -lApp
 ldflags=-L../src -Wl,-rpath,../src
 dist=Makefile,tests.sh
 
