--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,4 +1,4 @@
-targets=tests.log,udp
+targets=tests.log,transport
 cppflags=-I ../include
 cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2
@@ -9,11 +9,11 @@ dist=Makefile,tests.sh
 [tests.log]
 type=script
 script=./tests.sh
-depends=udp
+depends=transport
 
-[udp]
+[transport]
 type=binary
-sources=udp.c
+sources=transport.c
 
-[udp.c]
+[transport.c]
 depends=../src/libApp.a
