--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -1,4 +1,4 @@
-targets=tcp,udp
+targets=tcp,template,udp
 cppflags_force=-I ../../include
 cppflags=
 cflags_force=-W -fPIC
@@ -9,6 +9,10 @@ dist=Makefile
 type=plugin
 sources=tcp.c
 install=$(LIBDIR)/App/transport
+
+[template]
+type=plugin
+sources=template.c
 
 [udp]
 type=plugin
