--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -1,4 +1,4 @@
-targets=tcp,template,udp
+targets=tcp,tcp4,tcp6,template,udp,udp4,udp6
 cppflags_force=-I ../../include
 cppflags=
 cflags_force=-W -fPIC
@@ -10,6 +10,22 @@ type=plugin
 sources=tcp.c
 install=$(LIBDIR)/App/transport
 
+[tcp4]
+type=plugin
+sources=tcp4.c
+install=$(LIBDIR)/App/transport
+
+[tcp4.c]
+depends=tcp.c
+
+[tcp6]
+type=plugin
+sources=tcp6.c
+install=$(LIBDIR)/App/transport
+
+[tcp6.c]
+depends=tcp.c
+
 [template]
 type=plugin
 sources=template.c
@@ -18,3 +34,19 @@ sources=template.c
 type=plugin
 sources=udp.c
 install=$(LIBDIR)/App/transport
+
+[udp4]
+type=plugin
+sources=udp4.c
+install=$(LIBDIR)/App/transport
+
+[udp4.c]
+depends=udp.c
+
+[udp6]
+type=plugin
+sources=udp6.c
+install=$(LIBDIR)/App/transport
+
+[udp6.c]
+depends=udp.c
