--- a/tests/project.conf
+++ b/tests/project.conf
@@ -9,7 +9,7 @@ dist=Makefile,tests.sh
 [tests.log]
 type=script
 script=./tests.sh
-depends=transport
+depends=transport,../src/transport/tcp.c,../src/transport/udp.c
 
 [transport]
 type=binary
