Fixed building DeforaOS

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,9 +2,10 @@ TARGETS	= tests.log transport
 PREFIX	= /usr/local
 DESTDIR	=
 BINDIR	= $(PREFIX)/bin
+SBINDIR	= $(PREFIX)/sbin
 CC	?= cc
-CPPFLAGSF?=
-CPPFLAGS= -I ../include
+CPPFLAGSF= -I ../include
+CPPFLAGS?=
 CFLAGSF	= -W `pkg-config --cflags libSystem`
 CFLAGS	= -Wall -g -O2
 LDFLAGSF= `pkg-config --libs libSystem` -lApp
