--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,5 +1,5 @@
 targets=tests.log,transport
-cppflags=-I ../include
+cppflags_force=-I ../include
 cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2
 ldflags_force=`pkg-config --libs libSystem` -lApp
